--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "shell": "codeceptjs shell",
     "test": "codeceptjs run-multiple --all --reporter mocha-multi",
     "test:rest": "codeceptjs run --grep 'rest' --reporter mocha-multi",
+    "test:puppeteer": "codeceptjs run -c ./configs/codecept.conf.puppeteer.js",
     "test:multi_chrome": "codeceptjs run-multiple chrome:chrome --reporter mocha-multi",
     "test:multi_ie": "codeceptjs run-multiple \"ie:internet explorer\" --reporter mocha-multi",
     "disable:iezones": "Powershell -ExecutionPolicy bypass -File ./extras/Disable-InternetExplorerZones.ps1"
   },
   "dependencies": {
     "chai": "^4.1.2",
-    "codeceptjs": "^1.1.1",
+    "codeceptjs": "^1.1.5",
     "codeceptjs-webdriverio": "^1.0.1",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
@@ -35,6 +36,7 @@
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.5.1"
+    "eslint-plugin-react": "^7.5.1",
+    "puppeteer": "^1.1.0"
   }
 }
